# metalbot

./: .flake8  .gitignore  LICENSE  config.py  loggers.py  pyproject.toml
bot_handlers/: admin_handler.py  calc_handler.py  catalog_handler.py  catalyst_handler.py  instructions_handler.py  main_handler.py  other_handler.py  quotes_handler.py  regulations_handler.py
bot_keyboards/: inline_kb_catalyst.py  inline_kb_confirm.py  inline_kb_customers.py  inline_kb_instructions.py  inline_kb_quotes.py  inline_kb_regulations.py  keyboards.py
db/: db_handlers.py
src/: main.py  parser_handler.py  services.py  utils.py
